--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-ftp": "^1.2.0",
+    "node": "^14.17.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
