--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-ftp": "^1.2.0",
-    "node": "^14.16.1",
+    "node": "^14.17.3",
+    "npm": "^6.14.13",
     "validator": "^13.6.0"
   },
   "devDependencies": {
