--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "build:prod": "vue-cli-service build"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
